rename index file

--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
         <div id="name"><h2>John Dusseau</h2></div>
         <nav id="horzNav">
           <p>
-            <a href="ex410home.html">Home |</a>
+            <a href="index.html">Home |</a>
             <a href="hobbies.html">Hobbies |</a>
             <a href="sports.html">Sports |</a>
           </p>
